[gd_scene load_steps=13 format=2]

[ext_resource path="res://GameObjects/CardFree/Textures/cards_0.png" type="Texture" id=1]
[ext_resource path="res://GameObjects/CardFree/Scripts/Card.gd" type="Script" id=2]
[ext_resource path="res://GameObjects/CardFree/CardGradientPlayer.tres" type="Texture" id=3]
[ext_resource path="res://GameObjects/CardFree/CardGradientEnemy.tres" type="Texture" id=4]
[ext_resource path="res://Globals/Textures/cardstext_13-edit.png" type="Texture" id=5]
[ext_resource path="res://GameScenes/Battle/Audio/sound-capture.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="GDScript" id=2]
script/source = "extends GridContainer

const ATTRIBUTE_TEXTURE_WIDTH = 64
const TEXTURE_OFFSET = 6

func _ready():
	# need to duplicate the original texture, otherwise changing the value of a texture
	# resource will affect also other cards attributes
	$Top.texture = $Top.texture.duplicate()
	$Bottom.texture = $Bottom.texture.duplicate()
	$Right.texture = $Right.texture.duplicate()
	$Left.texture = $Left.texture.duplicate()

func set_attributes(attributes_data):
	$Top.texture.region = _get_texture_region_by_value(attributes_data[\"top\"])
	$Left.texture.region = _get_texture_region_by_value(attributes_data[\"left\"])
	$Right.texture.region = _get_texture_region_by_value(attributes_data[\"right\"])
	$Bottom.texture.region = _get_texture_region_by_value(attributes_data[\"bottom\"])

func _get_texture_region_by_value(value):
	return Rect2(
		TEXTURE_OFFSET + (value)*ATTRIBUTE_TEXTURE_WIDTH, 
		TEXTURE_OFFSET, 
		32, 
		32
	)

#func _process(delta):
#	# Called every frame. Delta is time since last frame.
#	# Update game logic here.
#	pass
"

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6, 6, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6, 6, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6, 6, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 6, 6, 32, 32 )

[node name="Card" type="TextureButton"]
margin_right = 256.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = SubResource( 1 )
expand = true
script = ExtResource( 2 )

[node name="PlayerGradient" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -128.0
margin_right = 123.0
margin_bottom = 111.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 126, 126 )
texture = ExtResource( 3 )
expand = true

[node name="EnemyGradient" type="TextureRect" parent="."]
visible = false
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -128.0
margin_right = 123.0
margin_bottom = 111.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 126, 126 )
texture = ExtResource( 4 )
expand = true

[node name="Attributes" type="GridContainer" parent="."]
margin_left = 18.0
margin_top = 18.0
margin_right = 96.0
margin_bottom = 96.0
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 3
script = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Container" type="Control" parent="Attributes"]
margin_right = 23.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="TextureRect" parent="Attributes"]
margin_left = 27.0
margin_right = 50.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 3 )
expand = true

[node name="Container2" type="Control" parent="Attributes"]
margin_left = 54.0
margin_right = 77.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="TextureRect" parent="Attributes"]
margin_top = 27.0
margin_right = 23.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 4 )
expand = true

[node name="Container3" type="Control" parent="Attributes"]
margin_left = 27.0
margin_top = 27.0
margin_right = 50.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Right" type="TextureRect" parent="Attributes"]
margin_left = 54.0
margin_top = 27.0
margin_right = 77.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 5 )
expand = true

[node name="Container4" type="Control" parent="Attributes"]
margin_top = 54.0
margin_right = 23.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bottom" type="TextureRect" parent="Attributes"]
margin_left = 27.0
margin_top = 54.0
margin_right = 50.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 6 )
expand = true

[node name="Container5" type="Control" parent="Attributes"]
margin_left = 54.0
margin_top = 54.0
margin_right = 77.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DebugLabel" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0

[node name="AudioCapture" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

